feat(api): add recentGames endpoint
